# crisp_controllers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  REFACTORING_GUIDE.md  crisp_controllers.xml  docker-compose.yaml  fast_build.sh  mkdocs.yml  pyproject.toml  ros_aliases.sh
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: docker_build.yml  humble_ros2_ci.yml  jazzy_ros2_ci.yml  kilted_ros2_ci.yml  release.yml  rolling_ros2_ci.yml  ros2_ci.yml  ros_industrial.yml
crisp_bringup/: package.xml  setup.py
crisp_bringup/config/: controllers.yaml
crisp_bringup/launch/: franka.launch.py
crisp_controllers/: CMakeLists.txt  crisp_controllers.xml  package.xml
crisp_controllers/include/crisp_controllers/: cartesian_impedance_controller.hpp  frictionless_controller.hpp  operational_space_controller.hpp  pch.hpp  pose_broadcaster.hpp  pseudo_inverse.hpp  torque_rate_saturation.hpp  visibility_control.h
crisp_controllers/include/crisp_controllers/utils/: friction_model.hpp  joint_limits.hpp  pseudo_inverse.hpp
crisp_controllers/src/: cartesian_impedance_controller.cpp  cartesian_impedance_controller.yaml  frictionless_controller.cpp  joint_impedance_controller.cpp  operational_space_controller.cpp  operational_space_controller.yaml  pose_broadcaster.cpp
crisp_controllers/tests/: test_filters.cpp  test_pseudo_inverse.cpp
crisp_py/: pixi.toml
crisp_py/crisp_py/: robot.py
crisp_py/crisp_py/control/: controller_switcher.py  joint_trajectory_controller_client.py
crisp_py/crisp_py/gripper/: gripper_client.py
docs/: controllers.md  getting_started.md  index.md  new_robot_setup.md
docs/misc/: calibrate_gripper.md  controllers.md  create_own_config.md  demos.md  multi_machine_setup.md  new_robot_setup.md
docs/pinnochio_analysis/: REFERENCE_FRAMES_COMPREHENSIVE_GUIDE.md  SUGGESTION.md  WORLD_JACOBIAN_SPATIAL_VELOCITY_EXPLAINED.md
docs/stylesheets/: extra.css
include/crisp_controllers/: cartesian_controller.hpp  cartesian_impedance_controller.hpp  mit_cartesian_controller.hpp  mit_joint_controller.hpp  pch.hpp  pinocchio_fwd.hpp  pose_broadcaster.hpp  torque_feedback_controller.hpp  twist_broadcaster.hpp
include/crisp_controllers/utils/: async_csv_logger.hpp  controller_log_data.hpp  controller_log_data_interface.hpp  csv_logger.hpp  csv_logger_interface.hpp  fiters.hpp  friction_model.hpp  joint_limits.hpp  mit_controller_log_data.hpp  mit_joint_controller_log_data.hpp  pseudo_inverse.hpp  torque_rate_saturation.hpp
scripts/: ros_aliases.sh  start_dev.sh
src/: cartesian_controller.cpp  cartesian_impedance_controller.cpp  cartesian_impedance_controller.yaml  joint_impedance_controller.cpp  mit_cartesian_controller.cpp  mit_cartesian_controller.yaml  mit_joint_controller.cpp  mit_joint_controller.yaml  pinocchio_explicit_instantiation.cpp  pose_broadcaster.cpp  pose_broadcaster.yaml  torque_feedback_controller.cpp  torque_feedback_controller.yaml  twist_broadcaster.cpp  twist_broadcaster.yaml
src/crisp_bringup/: package.xml  setup.cfg  setup.py
src/crisp_bringup/config/: controllers.yaml
src/crisp_bringup/config/fr3/: fr3.ros2_control.urdf.xacro  fr3.rviz  fr3.urdf.xacro  fr3.xml  fr3_single.urdf.xacro  scene.xml
src/crisp_bringup/crisp_bringup/: interactive_server.py  target_publisher.py
src/crisp_bringup/launch/: franka.launch.py
src/crisp_bringup/scripts/: set_collision_behavior.py
src/crisp_controllers/: CMakeLists.txt
src/crisp_controllers/include/crisp_controllers/: cartesian_impedance_controller.hpp  joint_impedance_controller.hpp
src/crisp_controllers/include/crisp_controllers/utils/: fiters.hpp  pseudo_inverse.hpp
src/crisp_controllers/src/: cartesian_impedance_controller.cpp  cartesian_impedance_controller.yaml  joint_impedance_controller.yaml
src/crisp_controllers/tests/: test_filters.cpp  test_pseudo_inverse.cpp  test_torque_rate_saturation.cpp
src/crisp_mujoco_sim/: CMakeLists.txt  README.md  crisp_mujoco_sim.xml  package.xml
src/crisp_mujoco_sim/include/crisp_mujoco_sim/: mujoco_simulator.h  system_interface.h
src/crisp_mujoco_sim/src/: mujoco_simulator.cpp  system_interface.cpp
src/crisp_py/: set_domain_id.sh
src/utils/: async_csv_logger.cpp  csv_logger.cpp
tests/: test_filters.cpp
