<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crisp_controllers</name>
  <version>0.1.0</version>
  <description>crisp_controllers provides controller to control a Franka Emika robot (and others) with ros2_control</description>
  <maintainer email="daniel.san.jose.pro@tum.de">Daniel San Jose Pro</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>pinocchio</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
